<resources>
    <string name="app_name">MyGFirstProject</string>
    <string name="output">output</string>
    <string name="calculator">Calculator</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="div">Div</string>
    <string name="sub">Sub</string>
    <string name="mul">Mul</string>
    <string name="add">Add</string>
</resources>